--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>THERMO!</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="public/thermostat.css">
     </head>
+
   <body>
 
       <h1>
@@ -36,14 +38,15 @@
         <button id="energy_usage1" type="submit" value="energyusage">Current Energy Usage</button>
       </div>
       <div class="energy_usage">
-        <span id="current_energy_usage"></span>
+        <p><span id="current_energy_usage"></span></p>
       </div>
       <div id="weirdgif"><img src="http://www.reactiongifs.com/r/brule-omg.gif"></div>
     <script src="src/jquery-3.2.1.js"></script>
-    <script src="src/Thermostat.js"></script>
-    <script src="src/interface.js"></script>
+    <script src="public/Thermostat.js"></script>
+    <script src="public/interface.js"></script>
     <div class="funbutton">
     <button type="button" id="firebutton">Feelin' Hot?</button>
     </div>
+
   </body>
 </html>
