API key for different cities and working form completed

--- a/index.html
+++ b/index.html
@@ -43,5 +43,13 @@
       <div class="energy_usage">
         <p><span id="current_energy_usage"></span></p>
 
+  <section>
+    <h1>City temperature: <span id="city-temperature"></span></h1>
+    <form id="select-city">
+      <input id="current-city" type="text" placeholder="Enter a city"></input>
+      <input type="submit"></input>
+    </form>
+  </section>
+
   </body>
 </html>
