Beautified some files

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
   <body>
 
-      <h1><center>THERMO!</center></h1>
+    <h1><center>WELCOME TO YOUR THERMO!</center></h1>
 
     <section>
       <center>
         <div class="label">
           <p>Current temperature:</p>
-          <p class="temp-font"><span id="temp_reading">C</p>
+          <p class="temp-font"><span id="temp_reading"></p>
           </span>
         </div>
 
