--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <center>
         <div class="label">
           <p>Current temperature:</p>
-          <p class="temp-font"><span id="temp_reading"></p>
-          </span>
+          <p class="temp-font"><span id="temp_reading"></p></span>
         </div>
 
         <div class="label">
@@ -54,7 +53,7 @@
 
   <section>
     <center>
-      <h1>City temperature: <span id="city-temperature"></span></h1>
+      <h1>Temperature in <span id="city"></span>&nbsp;<span id="city-temperature"></span></h1>
       <form id="select-city">
         <input id="current-city" type="text" placeholder="Enter a city"></input>
         <input type="submit"></input>
